05_Abstract-Syntax-Tree/tut5python_2/q2/src/main/mp/parser/MP.g4
grammar MP;

@lexer::header {
from lexererr import *
}

options{
	language=Python3;
}

program: mptype EOF;

arraytype:  arraytype dimen | primtype dimen; 

mptype: primtype | arraytype;

primtype: INTTYPE | FLOATTYPE; 

dimen: LSB num DOTDOT num RSB;

num: SIGN? INTLIT;

INTLIT: [0-9]+ ;

INTTYPE: 'integer';

FLOATTYPE: 'real';

LSB: '[' ;

RSB: ']' ;

SIGN: '-';

DOTDOT: '..' ;

COMMA: ',' ;

WS : [ \t\r\n]+ -> skip ; // skip spaces, tabs, newlines

ERROR_CHAR: .;
